--- a/app/src/main/res/drawable/edittext_background.xml
+++ b/app/src/main/res/drawable/edittext_background.xml
@@ -2,14 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <!-- 배경 색상 -->
-    <solid android:color="#FFFFFF" />
+    <solid android:color="?android:colorBackground" />
 
-    <!-- 테두리 둥글게 -->
     <corners android:radius="12dp" />
 
-    <!-- 외곽선 -->
     <stroke
         android:width="1dp"
-        android:color="#CCCCCC" />
+        android:color="?android:textColorPrimary" />
 </shape>
