--- a/app/src/main/res/drawable/edittext_rounded.xml
+++ b/app/src/main/res/drawable/edittext_rounded.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/white"/>
-    <stroke android:width="2dp" android:color="#000000"/>
+    <solid android:color="?android:colorBackground"/>
+    <stroke android:width="2dp" android:color="?android:textColorPrimary"/>
     <corners android:radius="30dp"/>
 </shape>
