--- a/app/src/main/res/drawable/rounded_circle.xml
+++ b/app/src/main/res/drawable/rounded_circle.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@android:color/white" />
+    <solid android:color="?android:colorBackground" />
     <corners android:radius="50dp" />
     <padding android:bottom="4dp" />
     <size android:width="36dp" android:height="36dp" />
