--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="?android:windowBackground"
+    android:padding="0dp">
 
     <!-- 다크모드 버튼 (왼쪽) -->
     <ImageButton
@@ -15,6 +16,7 @@
         android:layout_marginStart="25dp"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_darkmode"
+        app:tint="?android:textColorPrimary"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -27,6 +29,7 @@
         android:layout_marginEnd="25dp"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_setting"
+        app:tint="?android:textColorPrimary"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -48,7 +51,7 @@
         android:layout_width="60dp"
         android:layout_height="180dp"
         android:text="!"
-        android:textColor="@color/black"
+        android:textColor="?android:textColorPrimary"
         android:textSize="150sp"
         android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@id/connect_text"
@@ -61,9 +64,9 @@
         android:id="@+id/bottom_navigation"
         android:layout_width="0dp"
         android:layout_height="65dp"
-        android:background="@android:color/white"
+        android:background="?android:windowBackground"
         app:itemIconSize="36dp"
-        app:itemIconTint="@color/black"
+        app:itemIconTint="?android:textColorPrimary"
         app:menu="@menu/bottom_nav_menu"
         app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
