--- a/app/src/main/res/layout/dialog_connect_friend.xml
+++ b/app/src/main/res/layout/dialog_connect_friend.xml
@@ -42,7 +42,7 @@
             android:text="ID:"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="?android:textColorPrimary"
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="8dp" />
 
@@ -52,6 +52,7 @@
             android:layout_height="wrap_content"
             android:minHeight="48dp"
             android:hint="친구 아이디 입력해주세요"
+            android:textColorHint="?android:textColorSecondary"
             android:inputType="text"/>
     </LinearLayout>
 
