--- a/app/src/main/res/layout/dialog_create_diary.xml
+++ b/app/src/main/res/layout/dialog_create_diary.xml
@@ -42,7 +42,7 @@
             android:text="제목:"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="?android:textColorPrimary"
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="8dp" />
 
@@ -52,6 +52,7 @@
             android:layout_height="wrap_content"
             android:minHeight="48dp"
             android:hint="제목을 입력해주세요"
+            android:textColorHint="?android:textColorSecondary"
             android:inputType="text" />
     </LinearLayout>
 
@@ -62,7 +63,7 @@
         android:text="표지색상:"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="?android:textColorPrimary"
         android:layout_marginTop="20dp"
         android:layout_marginStart="15dp" />
 
@@ -191,7 +192,7 @@
         android:layout_height="wrap_content"
         android:text="다이어리 만들기 후 세부 디자인이 가능해요!"
         android:textSize="15sp"
-        android:textColor="#555555"
+        android:textColor="?android:textColorSecondary"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp" />
@@ -204,7 +205,6 @@
         android:layout_gravity="center_horizontal"
         android:text="완료"
         android:background="@drawable/button_rounded"
-        style="@style/ButtonText"
-        android:enabled="false" />
+        style="@style/ButtonText" />
 
 </LinearLayout>
