--- a/app/src/main/res/layout/dialog_select_emotion.xml
+++ b/app/src/main/res/layout/dialog_select_emotion.xml
@@ -14,7 +14,7 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:src="@drawable/ic_arrow_back"
-        android:layout_gravity="end"
+        android:layout_gravity="start"
         android:contentDescription="닫기 버튼" />
 
     <!-- 타이틀 -->
@@ -25,6 +25,7 @@
         android:text="오늘의 감정을 선택해주세요"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:textColor="?android:textColorPrimary"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="16dp" />
 
@@ -74,7 +75,7 @@
         android:id="@+id/btn_select_complete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="선택 완료"
-        android:backgroundTint="@color/black"
-        android:textColor="@color/white" />
+        android:text="완료"
+        style="@style/BlackRoundedButton"
+        />
 </LinearLayout>
