--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">50sp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">?android:textColorPrimary</item>
         <item name="android:textStyle">bold</item>
     </style>
 
@@ -22,7 +22,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">36sp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">?android:textColorPrimary</item>
         <item name="android:textStyle">bold</item>
     </style>
 
@@ -30,7 +30,7 @@
     <style name="BlackRoundedButton">
         <item name="android:layout_width">289dp</item>
         <item name="android:layout_height">50dp</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:background">@drawable/button_rounded</item>
@@ -42,9 +42,10 @@
         <item name="android:layout_height">48dp</item>
         <item name="android:paddingStart">16dp</item>
         <item name="android:paddingEnd">16dp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">?android:textColorPrimary</item>
         <item name="android:textSize">14sp</item>
         <item name="android:background">@drawable/edittext_rounded</item>
+        <item name="android:textColorHint">?android:textColorSecondary</item>
     </style>
 
     <!-- 아이디/비밀번호 찾기 텍스트 -->
@@ -52,13 +53,14 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">12sp</item>
-        <item name="android:textColor">#80000000</item>
+        <item name="android:textColor">?android:textColorSecondary</item>
     </style>
+
     <!-- 버튼 텍스트 -->
     <style name="ButtonText">
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">20sp</item>
-        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
     </style>
 
     <!-- //////다이얼로그///////// -->
@@ -66,7 +68,7 @@
     <style name="DialogTitleText">
         <item name="android:textSize">30sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">?android:textColorPrimary</item>
         <item name="android:layout_gravity">center_horizontal</item>
     </style>
 </resources>
