다이얼로그, 메인엑티비티연결
다이얼로그, 메인엑티비티연결

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,7 +8,7 @@
         android:icon="@drawable/ic_diary2"
         android:title="" />
     <item
-        android:id="@+id/nav_mood"
+        android:id="@+id/nav_emotion"
         android:icon="@drawable/ic_emoji"
         android:title="" />
     <item
