--- a/app/src/main/res/layout/activity_emotion_summary.xml
+++ b/app/src/main/res/layout/activity_emotion_summary.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:windowBackground">
@@ -69,23 +70,54 @@
             android:textColor="?android:textColorPrimary" />
 
         <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:id="@+id/imgview"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginStart="6dp"
             android:src="@drawable/ic_array"
             app:tint="?android:textColorPrimary" />
     </LinearLayout>
 
-    <!-- 감정별 모아보기 버튼 바로 아래에 붙여주세요 -->
+    <LinearLayout
+        android:id="@+id/emotion_filter_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginLeft="120dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_emotion_summary">
+        <TextView
+            android:id="@+id/menu_my_emotions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:text="나의 감정"
+            android:textColor="?android:textColorPrimary"
+            android:textSize="14sp"
+            tools:layout_editor_absoluteX="116dp"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/menu_friends_emotions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:text="친구 감정"
+            android:textColor="?android:textColorPrimary"
+            android:textSize="14sp"
+            tools:layout_editor_absoluteX="116dp"
+            tools:layout_editor_absoluteY="269dp"
+            android:visibility="gone"/>
+    </LinearLayout>
+
     <GridLayout
         android:id="@+id/color_grid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:columnCount="5"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_emotion_summary"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/emotion_filter_menu">
 
         <!-- 1행 -->
         <View
@@ -216,5 +248,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
