--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="60dp"
         android:src="@drawable/ic_darkmode"
+        android:background="@android:color/transparent"
         app:tint="?android:textColorPrimary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,6 +28,7 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="25dp"
         android:src="@drawable/ic_setting"
+        android:background="@android:color/transparent"
         app:tint="?android:textColorPrimary"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
